Fixed btn text centering on firefox

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -105,9 +105,11 @@ button {
 .confirmDeleteBtn {
 	width: 5rem;
 	background-color: #bf3d3b;
+	padding: 0;
 	color: white;
 }
 .cancelDeleteBtn {
+	padding: 0;
 	width: 5rem;
 }
 
